[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/letter_popup.png" type="Texture" id=1]
[ext_resource path="res://LetterPopup.gd" type="Script" id=2]

[node name="LetterPopup" type="Node2D"]
script = ExtResource( 2 )

[node name="letter_popup" type="Sprite" parent="."]
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 576.0
margin_bottom = 768.0
custom_constants/margin_right = 18
custom_constants/margin_top = 18
custom_constants/margin_left = 18
custom_constants/margin_bottom = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 18.0
margin_top = 18.0
margin_right = 558.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 661.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 665.0
margin_right = 540.0
margin_bottom = 732.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonGarbage" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 177.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Throw away"

[node name="ButtonEdit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 181.0
margin_right = 358.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Edit letter"

[node name="ButtonScanner" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 362.0
margin_right = 540.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Scan letter"
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Body" to="." method="_on_Body_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/Body" to="." method="_on_Body_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonGarbage" to="." method="_on_ButtonGarbage_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonEdit" to="." method="_on_ButtonEdit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ButtonScanner" to="." method="_on_ButtonScanner_pressed"]
